@@ -1,2 +1,31 @@
 # WGU-C482
 Course work for WGU's course C482. This application uses JavaFX to create a static inventory of parts and products which the user can add, modify, or delete. 
+
+## Overview
+WGU-C482 is a JavaFX app that will ask for user input to add, modify, or delete parts and products. The course did not require the project to save data upon exit, and thus this feature is not included. This project incorporates: 
+
+- Java + JavaFX
+- Static data storage
+- Data modification 
+- Data traversing + searching
+
+## Getting Started
+#### Quick Note
+I will not be providing any assistance for installation and use of this project. 
+
+### Prerequisites
+- IntelliJ IDEA
+- Downloaded JavaFX (link below)
+- Java SDK
+
+### Installation
+1. Clone or download the project to your local machine.
+2. Open the project through your IDE.
+3. Add JavaFX as a library to your IDE - In IntelliJ, this can be done by pressing CTRL-ALT-SHIFT-S, then click on Libraries. Press the + button, click on Java, navigate to where you saved JavaFX and selected the `lib` folder inside the JavaFX root directory. 
+4. Make sure you have your SDK path set.
+5. Add `--module-path /<path>/javafx-sdk-11/lib/ --add-modules=javafx.controls` to your VM options, changing the <path> to the JavaFX directory.
+6. Build and run. 
+
+## Links
+- [JavaFX] -> https://gluonhq.com/products/javafx/
+- [IntelliJ IDEA] -> https://www.jetbrains.com/idea/
